# TuringDebugger

./: .gitignore  CMakeLists.txt  Lang.cpp  Lang.hpp  README.md  TM.cpp  TM.h  TM.hpp  decinc  decplus  settings.hpp  test.cpp  test1
Turing/: Lang.cpp  Lang.hpp  TM.cpp  TM.hpp  Turing.pro  Turing.pro.user.108ba0c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.hpp
build-Turing-Desktop-Debug/: Makefile  Turing  moc_mainwindow.cpp  ui_mainwindow.h
build-Turing-Desktop_Qt_5_9_2_GCC_64bit-Debug/: Makefile  Turing  moc_mainwindow.cpp  ui_mainwindow.h
